# UVisBox-Assistant

./: .claude-local.md.example  .coveragerc  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ENVIRONMENT_SETUP.md  LICENSE  PRE_PHASE_1_VALIDATION.md  RATE_LIMIT_FRIENDLY_TESTING.md  README.md  TESTING.md  config.py  create_test_data.py  data_tools.py  environment.yml  graph.py  interactive_test.py  interface.md  main.py  model.py  nodes.py  pyproject.toml  repl.py  requirements.txt  routing.py  run_tests_with_delays.py  setup_env.sh  simple_test.py  state.py  ten_phase_plan.md  test_graph.py  test_graph_integration.py  test_graph_quick.py  test_happy_path.py  test_matplotlib_behavior.py  test_phase1.py  test_phase2.py  test_routing.py  (+5 more)
docs/: ANALYSIS_EXAMPLES.md  API.md  ENVIRONMENT_SETUP.md  USER_GUIDE.md
docs/plans/: 2025-11-05-analyzer-improvement-design.md  2025-11-05-analyzer-improvement-implementation.md  2025-11-05-bug-fixes-design.md  2025-11-05-bug-fixes-implementation.md  2025-11-05-test-redesign-implementation.md  2025-11-05-test-redesign-v0.3.4.md  2025-11-05-v0.3.5-unit-test-isolation-design.md  2025-11-05-v0.3.5-unit-test-isolation.md
docs/plans/web-interface/: design.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md
docs/testing/: unit-test-coverage-summary.md
plans/: 00_project_modifications.md  README.md  detailed_debug_info_on_demand.md  phase_01_schemas_and_dispatchers.md  phase_02_langgraph_state_and_nodes.md  phase_03_graph_wiring_and_routing.md  phase_04.5_codebase_restructure.md  phase_04_end_to_end_test.md  phase_05_error_handling.md  phase_06_conversational_followup.md  phase_07_hybrid_control.md  phase_08_session_management.md  phase_09_comprehensive_testing.md  phase_09_comprehensive_testing_updated.md  phase_09_final_testing.md  phase_10_documentation_and_packaging.md  phase_10_documentation_and_packaging_updated.md
plans/debug_feature/: README.md  phase_01_core_infrastructure.md  phase_02_verbose_mode.md  phase_03_user_commands.md  phase_04_enhanced_errors.md  phase_05_auto_fix_detection.md  phase_06_testing.md  phase_07_documentation.md
plans/project_restructure/: v0.3.1_implementation_plan.md
plans/rebrand-to-uvisbox-assistant/: README.md  phases_1.md  phases_2.md  phases_3.md  phases_4.md  phases_5.md  phases_6.md
plans/uncertainty-analyzer/: README.md  phases_1.md  phases_2.md  phases_3.md  phases_4.md  phases_5.md  phases_6.md
scripts/: update_imports.py  verify_compatibility.py
src/chatuvisbox/: __init__.py  __main__.py  command_parser.py  config.py  conversation.py  data_tools.py  error_tracking.py  graph.py  hybrid_control.py  logger.py  main.py  model.py  nodes.py  output_control.py  routing.py  state.py  utils.py  vis_tools.py  viz_tools.py
src/uvisbox_assistant/: __init__.py  __main__.py  analyzer_tools.py  config.py  conversation.py  data_tools.py  graph.py  hybrid_control.py  logger.py  main.py  model.py  nodes.py  routing.py  state.py  statistics_tools.py  utils.py  vis_tools.py
src/uvisbox_assistant/core/: __init__.py  graph.py  nodes.py  routing.py  state.py
src/uvisbox_assistant/errors/: __init__.py  error_interpretation.py  error_tracking.py
src/uvisbox_assistant/llm/: __init__.py  model.py
src/uvisbox_assistant/session/: __init__.py  command_parser.py  conversation.py  hybrid_control.py
src/uvisbox_assistant/tools/: __init__.py  analyzer_tools.py  data_tools.py  statistics_tools.py  vis_tools.py
src/uvisbox_assistant/utils/: __init__.py  data_loading.py  logger.py  main_thread.py  output_control.py  renderer.py  utils.py
src/uvisbox_assistant/web/: __init__.py  __main__.py  figures.py  server.py  session_runner.py  trace_translator.py
test_data/: README.md  ar2_harmonic_timeseries.csv  sample_curves.csv  sample_scalar_field.npy  sample_vector_field.npy  sample_vector_positions.npy
tests/: README.md  __init__.py  conftest.py  interactive_test.py  run_tests_with_delays.py  simple_test.py  test.py  test_graph.py  test_graph_integration.py  test_graph_quick.py  test_happy_path.py  test_matplotlib_behavior.py  test_multiturn.py  test_phase1.py  test_phase2.py  test_routing.py  test_simple.py
tests/e2e/: __init__.py  test_analysis_workflows.py  test_contour_boxplot.py  test_curve_boxplot.py  test_functional_boxplot.py  test_matplotlib_behavior.py  test_probabilistic_ms.py  test_squid_glyph.py  test_uncertainty_lobes.py
tests/integration/: test_analyzer_tool.py  test_csv_loading.py  test_e2e_pipelines.py  test_error_handling.py  test_error_recording.py  test_hybrid_control.py  test_report_switching.py  test_session_management.py  test_tool_interfaces.py
tests/interactive/: interactive_test.py
tests/llm_integration/: __init__.py  test_analyzer.py  test_error_handling.py  test_hybrid_control.py  test_report_switching.py  test_session.py  test_web_session.py
tests/unit/: __init__.py  test_analyzer_tools.py  test_command_handlers.py  test_command_parser.py  test_config.py  test_conversation.py  test_data_loading.py  test_error_interpretation.py  test_error_recording.py  test_error_tracking.py  test_figures.py  test_graph.py  test_hybrid_control.py  test_logger.py  test_model.py  test_nodes.py  test_output_control.py  test_renderer.py  test_routing.py  test_state_extensions.py  test_statistics_tools.py  test_tools.py  test_trace_translator.py  test_utils.py  test_web_server.py
tests/unit/fixtures/: astream_events_sample.json
tests/utils/: run_all_tests.py
tests/uvisbox_interface/: __init__.py  test_csv_loading.py  test_file_renderer.py  test_hybrid_rerender.py  test_tool_interfaces.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/public/ScenarioConfigs/: UVisBoxAssistant.json
web/src/: main.tsx
web/src/UVisBoxAssistant/: UVisBoxAssistantGlobalContext.ts  index.ts  (+1 more)
(+3 files in other folders)
