[tool.poetry]
name = "uvisbox-assistant"
version = "0.3.2"
description = "Natural language interface for UVisBox uncertainty visualization"
authors = ["Jixian Li <jixianli@sci.utah.edu>"]
readme = "README.md"
license = "MIT"
packages = [{include = "uvisbox_assistant", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
langchain = "^0.3.27"
langchain-google-genai = "^2.1.12"
langgraph = "^0.2.76"
numpy = "^2.0"
matplotlib = "^3.10.7"
pandas = "^2.3.3"
langsmith = "^0.4.38"
scikit-learn = "^1.7.2"
scikit-image = "^0.25.2"
scipy = "^1.16.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^4.1.0"
black = "^24.10.0"
ruff = "^0.3.7"
ipython = "^8.37.0"

[tool.poetry.scripts]
uvisbox-assistant = "uvisbox_assistant.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "e2e: End-to-end integration tests",
    "llm_subset_analysis: Analysis workflow LLM integration tests",
]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long (handled by black)
