[tool.poetry]
name = "uvisbox-assistant"
version = "0.4.0"
description = "Natural language interface for UVisBox uncertainty visualization"
authors = ["Jixian Li <jixianli@sci.utah.edu>"]
readme = "README.md"
license = "MIT"
packages = [{include = "uvisbox_assistant", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
langchain = "^1.2.15"
langgraph = "^1.1.10"
numpy = "^2.0"
matplotlib = "^3.10.7"
pandas = "^3.0.2"
langsmith = "^0.7.37"
scikit-learn = "^1.7.2"
scikit-image = "^0.26.0"
scipy = "^1.16.3"
langchain-ollama = "^1.1.0"
pyvista = "^0.46"
pyvistaqt = "^0.11.4"
pyside6 = "^6.11"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
black = "^26.3.1"
ruff = "^0.15.12"
ipython = "^9.13.0"

[tool.poetry.scripts]
uvisbox-assistant = "uvisbox_assistant.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "smoke: critical path smoke tests (~3 LLM calls)",
    "e2e: End-to-end integration tests",
    "llm_subset_error_handling: error handling LLM integration tests",
    "llm_subset_hybrid_control: hybrid control LLM integration tests",
    "llm_subset_session: session management LLM integration tests",
    "llm_subset_functional_boxplot: functional boxplot e2e tests",
    "llm_subset_curve_boxplot: curve boxplot e2e tests",
    "llm_subset_contour_boxplot: contour boxplot e2e tests",
    "llm_subset_probabilistic_ms: probabilistic marching squares e2e tests",
    "llm_subset_uncertainty_lobes: uncertainty lobes e2e tests",
    "llm_subset_squid_glyph: squid glyph e2e tests",
]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long (handled by black)
