[project]
name = "uvisbox-assistant"
version = "0.4.0"
description = "Natural language interface for UVisBox uncertainty visualization"
authors = [{ name = "Jixian Li", email = "jixianli@sci.utah.edu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "uvisbox",
    "langchain>=1.2.15,<2",
    "langgraph>=1.1.10,<2",
    "numpy>=2.0,<3",
    "matplotlib>=3.10.7,<4",
    "pandas>=3.0.2,<4",
    "langsmith>=0.7.37,<0.8",
    "scikit-learn>=1.7.2,<2",
    "scikit-image>=0.25.2,<0.26",
    "scipy>=1.16.3,<2",
    "langchain-ollama>=1.1.0,<2",
    "pyvista>=0.47.1,<0.48",
    "pyvistaqt>=0.11.4,<0.12",
    "pyside6>=6.11,<7",
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "websockets>=13,<14",
]

[project.scripts]
uvisbox-assistant = "uvisbox_assistant.__main__:main"

[tool.uv.sources]
uvisbox = { path = "external/UVisBox", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1.0,<8",
    "black>=26.3.1,<27",
    "ruff>=0.15.12,<0.16",
    "ipython>=9.13.0,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uvisbox_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "smoke: critical path smoke tests (~3 LLM calls)",
    "e2e: End-to-end integration tests",
    "llm_subset_error_handling: error handling LLM integration tests",
    "llm_subset_hybrid_control: hybrid control LLM integration tests",
    "llm_subset_session: session management LLM integration tests",
    "llm_subset_functional_boxplot: functional boxplot e2e tests",
    "llm_subset_curve_boxplot: curve boxplot e2e tests",
    "llm_subset_contour_boxplot: contour boxplot e2e tests",
    "llm_subset_probabilistic_ms: probabilistic marching squares e2e tests",
    "llm_subset_uncertainty_lobes: uncertainty lobes e2e tests",
    "llm_subset_squid_glyph: squid glyph e2e tests",
]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long (handled by black)
